# sharepoint-foundry

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  LICENSE  README-AGENT.md  README-SHAREPOINT.md  README.md  pyproject.toml  ruff.toml  setup.rest
.github/agents/: copilot-instructions.md
.github/prompts/: plan-conversationPersistence.prompt.md  plan-multiBackendSearch.prompt.md  plan-webChatInterface.prompt.md
.specify/memory/: constitution.md
infra/: main.bicep  main.bicepparam  main.json
notebooks/: .env.template  setup-foundryiq-approach.ipynb  setup-indexed-sharepoint-approach.ipynb  setup-indexer-approach.ipynb
scripts/: deploy.sh  index-acl-disabled.json  index-acl-enabled.json
specs/001-agent-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agent-setup/checklists/: requirements.md
specs/001-agent-setup/contracts/: openapi.yaml
src/: __init__.py  config.py  logging_config.py  main.py
src/agents/: __init__.py  sharepoint_qa.py
src/models/: __init__.py  conversation.py  document.py  errors.py  user.py
src/services/: __init__.py  audit.py  auth.py  conversation.py  kb_search.py  rate_limiter.py  search.py  title_generator.py
static/: index.html
static/css/: styles.css
static/js/: app.js  auth.js  chat.js  conversations.js
tests/: dry_run.py
tests/contract/: test_chat_api.py  test_conversations_api.py
tests/fixtures/: sharepoint_responses.json
tests/fixtures/sample_documents/: it_acceptable_use_policy.txt  travel_expense_policy.txt
tests/integration/: test_auth_flow.py  test_concurrent_users.py  test_conversation_persistence.py  test_qa_flow.py  test_rate_limiting.py
tests/unit/: test_audit.py  test_auth.py  test_config.py  test_conversation.py  test_rate_limiter.py  test_search.py  test_user_model.py
